--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "base.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "chmod +x ./node_modules/.bin/live-server",
     "start": "npx live-server --port=8080 --open=base.html"
   },
   "keywords": [],
