--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "base.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx live-server --port=8080 --open=base.html"
+    "start": "live-server --port=8080 --open=base.html"
   },
   "keywords": [],
   "author": "",
